# dataBaseProj

./: CMakeLists.txt  a.out  abstractField.cpp  abstractField.h  courseField.cpp  courseField.h  database.db  facultyField.cpp  facultyField.h  groupField.cpp  groupField.h  idField.cpp  idField.h  main.cpp  nameField.cpp  nameField.h  studField.cpp  studField.h
